import java.text.SimpleDateFormat

plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.0'
    id 'io.spring.dependency-management' version '1.1.6'
    id 'org.liquibase.gradle' version '2.2.0'
}

ext {
    gitVersion = 'git rev-parse --short HEAD'.execute().text.trim()
    buildTime = new SimpleDateFormat("yyyyMMdd-HHmmss").format(new Date())
    appVersion = "0.0.1-${gitVersion}"
}

version = appVersion

tasks.named('bootJar') {
    archiveBaseName.set("WorkTask")
    archiveVersion.set(appVersion)
}

tasks.named('jar') {
    enabled = false
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
    liquibaseRuntime
}

repositories {
    mavenCentral()
}

configurations {
    liquibaseRuntime
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.security:spring-security-crypto'
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation group: 'org.hibernate.validator', name: 'hibernate-validator', version: '8.0.0.Final'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '3.4.0'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'
    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
    implementation 'org.liquibase:liquibase-core'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
}

tasks.named('test') {
    useJUnitPlatform()
}